myapp/app/deployments/k8s/P/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app-service-clusterip
            port:
              number: 8000
        path: /master/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
